added listing in pages added async done feedback fixed case issue with names fixed error when about subcommand was called